Update index.html, index.css for make a new theme

--- a/index.html
+++ b/index.html
@@ -3,9 +3,54 @@
 	<head>
 		<meta charset="utf-8">
 		<title>OrehOnyah Github Blog</title>
+		<link rel="stylesheet" type="text/css" href="style/index.css">
 	</head>
 	<body>
-		HELLO WORLD!
+		<header>
+			<div id="header_top">
+				<img class="profile_img_small" src="https://avatars3.githubusercontent.com/u/10693756?s=60&v=4"alt="logo"/>
+			</div>
+		<div class="absolutely_center" id="title"> OrehOnyah Github Blog</div>
+		</header>
+		<section id="blog_articles">
+			<h1>New Blog Articles</h1>
+			<div class="max_section_width">
+
+				<button id="blog_articles_more">more</button>
+			</div>
+		</section>
+		<section id="github_repo">
+			<h1>New Change on Repositories</h1>
+			<div class="max_section_width">
+				
+				<button id="github_repo_more">more</button>
+			</div>
+		</section>
+		<section id="new_commits">
+			<h1>My New Commits</h1>
+			<div class="max_section_width">
+
+			</div>
+		</section>
+		<footer>
+			<address cite="https://github.com/orehonyah">
+				<pre>
+Jung Jinwook
+	Visit my Github : <a href="https://github.com/orehonyah">OrehOnyah(Jung Jinwook)</a>
+				</pre>
+			</address>
+			<address cite="https://oreh.onyah.net">
+				<pre>
+	Visit my Blog : <a href="https://oreh.onyah.net">OrehOnyah</a>
+		studing Computer Science & Engineering at Chungnam National University
+				</pre>
+			</address>
+			<address cite="https://unsplash.com/@domenicoloia">
+				<pre>
+	Background Photo by <a href="https://unsplash.com/@domenicoloia">Domenico Loia</a> on Unsplash
+				</pre>
+			</address>
+		</footer>
 	</body>
 </html>
 
